--- a/source/res/layout-xhdpi/fragment_main.xml
+++ b/source/res/layout-xhdpi/fragment_main.xml
@@ -2,15 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cremamobile.filemanager.CremaActivity$PlaceholderFragment" >
-
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical">
+		    <LinearLayout
+		        android:id="@+id/layout_toolbar"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal"/>
+		    <GridView
+		         android:id="@+id/layout_grid"
+		         android:layout_below="@id/layout_toolbar"
+		         android:numColumns="auto_fit"
+		         android:gravity="center"
+		         android:columnWidth="60dp"
+		         android:stretchMode="columnWidth"
+		         android:layout_width="fill_parent"
+		         android:layout_height="fill_parent"
+		         />
+		</LinearLayout>
+	    <include android:id="@+id/layout_settings"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        layout="@layout/layout_setting"/>
+        
+    </FrameLayout>
+    
 
 </RelativeLayout>
