--- a/source/res/layout-xhdpi/tree_list_item.xml
+++ b/source/res/layout-xhdpi/tree_list_item.xml
@@ -2,14 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:gravity="center_vertical">
+	android:orientation="horizontal"
+	android:gravity="left|center_vertical">
+	<ImageView android:id="@+id/treeview_list_item_indicator_image"
+	    android:layout_width="10dp"
+		android:layout_height="10dp"
+		android:layout_marginRight="5dp"
+		android:src="@drawable/cross_01"/>
+	<ImageView android:id="@+id/treeview_list_item_folder_image"
+	    android:layout_width="20dp"
+		android:layout_height="15dp"
+		android:layout_marginRight="12dp"
+		android:src="@drawable/folder_02"/>
 	<TextView
 	    android:text="Text"
-	    android:padding="4dip"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-		android:id="@+id/demo_list_item_description"
+	    android:layout_height="fill_parent"
+	    android:gravity="center_vertical|left"
+		android:id="@+id/treeview_list_item_description"
 		android:textAppearance="?android:attr/textAppearanceSmall"
-		android:layout_weight="1">
-	</TextView>
+		android:layout_weight="1"/>
 </LinearLayout>
