--- a/source/res/layout-xhdpi/tree_list_item_wrapper.xml
+++ b/source/res/layout-xhdpi/tree_list_item_wrapper.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/treeview_list_item_layout"
     android:layout_width="fill_parent"
-	android:layout_height="45dp"
-	android:id="@+id/treeview_list_item_layout">
-	<LinearLayout android:id="@+id/treeview_list_item_image_layout"
-	    android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:gravity="right|center_vertical"
-		android:orientation="horizontal"
-		android:paddingLeft="10dp">
-		<ImageView android:id="@+id/treeview_list_item_collapse_image"
-		    android:paddingRight="5dp"
-		    android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:duplicateParentState="true"
-			android:src="@drawable/cross_01" >
-		</ImageView>
-		<ImageView android:id="@+id/treeview_list_item_folder_image"
-		    android:layout_marginRight="12dp"
-		    android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:duplicateParentState="true"
-			android:src="@drawable/folder_02" >
-		</ImageView>
-	</LinearLayout>
-	<FrameLayout android:id="@+id/treeview_list_item_frame"
-	    android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:layout_weight="1">
-	</FrameLayout>
+    android:layout_height="45dp"
+    android:orientation="horizontal"
+    android:paddingRight="15dp"
+    tools:context=".treeview.TreeViewAdapter" >
+
+    <LinearLayout
+        android:id="@+id/treeview_list_indent"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:gravity="left|center"
+        android:orientation="horizontal" />
+
+    <FrameLayout
+        android:id="@+id/treeview_list_item_frame"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
+    </FrameLayout>
+
 </LinearLayout>
