--- a/source/res/menu/crema.xml
+++ b/source/res/menu/crema.xml
@@ -4,13 +4,17 @@
     tools:context="com.cremamobile.filemanager.CremaActivity" >
 
     <item
-        android:id="@+id/action_example"
-        android:title="@string/action_example"
-        app:showAsAction="withText|ifRoom"/>
+        android:id="@+id/action_viewmode"
+        android:title="@string/action_viewmode"
+        app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_delete"
         android:orderInCategory="100"
+        android:title="@string/delete"
+        app:showAsAction="ifRoom"/>
+    
+    <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
