--- a/source/res/values/attrs.xml
+++ b/source/res/values/attrs.xml
@@ -3,10 +3,12 @@
 	<declare-styleable name="TreeViewList">
 	    <attr name="collapsible" format="boolean" />
 	    <attr name="src_root_collapsed" format="reference|color" />
-	    <attr name="src_root_expended" format="reference|color" />
-	    <attr name="src_expanded" format="reference|color" />
-		<attr name="src_collapsed" format="reference|color" />
-        <attr name="indent_width" format="dimension" />
+	    <attr name="src_root_expanded" format="reference|color" />
+	    <attr name="src_directory_expanded" format="reference|color" />
+		<attr name="src_directory_collapsed" format="reference|color" />
+		<attr name="src_indicator_collapsed" format="reference|color" />
+		<attr name="src_indicator_expanded" format="reference|color" />
+		<attr name="indent_width" format="dimension" />
         <attr name="handle_trackball_press" format="boolean" />
 		<attr name="indicator_gravity">
 			<!-- Push object to the top of its container, not changing its size. -->
