--- a/source/res/values/colors.xml
+++ b/source/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="color_title_text">#ffffff</color>
     
     <color name="color_storage_background">#ffffff</color>
-    <color name="color_drawer_background">#000000</color>
+    <color name="color_storage_progress_background">#00ff00</color>
+    <color name="color_drawer_background">#ffffff</color>
+    <color name="color_drawer_storage_info_background">#000000</color>
     <color name="color_drawer_divider">#c6c6c6</color>
     <color name="color_drawer_total_size_text">#96cf0b</color>
     <color name="color_drawer_use_size_text">#5b5b5b</color>
